Mon Feb 24 08:44:39 2003  Ossama Othman  <ossama@uci.edu>

	* tao/DynamicInterface/DII_ClientRequestInfo.h:

	  Fixed problem where "ace/post.h" was not included in
	  interceptor disabled builds.

	  Fixed problem that prevented the TAO_DII_ClientRequestInfo class
	  from ever being visible.  A preprocessor check for
	  "TAO_HAS_INTERCEPTORS == 1" was being performed before any
	  headers that defined "TAO_HAS_INTERCEPTORS" were included
	  meaning that condition always evaluated to false.  This also
	  fixes "unresolved symbol" errors that have appeared in some
	  builds.

	* tao/DynamicInterface/DII_ClientRequestInfo.cpp:

	  Fixed syntax errors that were exposed by the code actually being
	  made visible.

Mon Feb 24 15:35:23 2003  Edward Scott  <eas@prismtechnologies.com>

	* tao/DynamicAny/DynUnion_i.h:
	* tao/DynamicAny/DynStruct_i.h:

	  Fixed incorrect environment macro usage. Thanks to
	  vince@mounts.cc for reporting the problem.

Sat Feb 22 09:50:31 2003  Ossama Othman  <ossama@uci.edu>

	* tao/PortableServer/Collocated_Object.cpp (_get_component):
	  (_is_equivalent, _tao_QueryInterface):

	  Wrapped remaining CORBA::Object base class method calls with the
	  ACE_NESTED_CLASS macro.  Addresses remaining problems in Borland
	  C++ builds.

Sat Feb 22 09:37:29 2003  Ossama Othman  <ossama@uci.edu>

	* tao/ORB.h (ORB):

	  Qualify the TAO_ORB_Core friend declaration with the global
	  scope ("::") qualifier.  Addresses a problem where some
	  compilers assume that the TAO_ORB_Core declaration actually
	  resides in the CORBA namespace.

	* tao/DynamicInterface/Makefile.bor (OBJFILES):

	  Fixed syntax error.

Sat Feb 22 09:06:45 2003  Ossama Othman  <ossama@uci.edu>

	* tao/ValueFactory.h (TAO_OBV_CREATE_RETURN_TYPE):
	  (TAO_OBV_REGISTER_FACTORY):

	  Removed space in macro definition that was incorrectly
	  introduced, and caused syntax errors in some builds.

Sat Feb 22 08:52:13 2003  Ossama Othman  <ossama@uci.edu>
